# aniseek

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  README.md  compose.dev.yaml  compose.yaml  docker-compose.yaml
.agents/skills/feature-spec/: SKILL.md
.claude/skills/ani-scrapy/: SKILL.md
.github/: release.yaml
.github/workflows/: docker.yml
backend/: .dockerignore  AGENTS.md  Dockerfile  entrypoint.sh  pyproject.toml
backend/src/: config.py  exceptions.py  handlers.py  log.py  main.py  middleware.py  models.py  responses.py  routes.py  utils.py  worker.py
backend/src/database/: __init__.py  client.py  config.py  utils.py
backend/src/databases/postgres/: __init__.py  client.py  models.py
backend/src/utils/: cast.py  datetime_utils.py  exception_handlers.py  exceptions.py  models.py  responses.py
frontend/: .dockerignore  Dockerfile  components.json  index.html  nginx.conf  package-lock.json  package.json  pnpm-lock.yaml  vite.config.ts
frontend-copy/: .dockerignore  Dockerfile  next-auth.d.ts  next.config.ts  package.json
frontend-copy/src/: middleware.ts
frontend-copy/src/app/: globals.css  layout.tsx  loading.tsx
frontend-copy/src/app/(web)/: layout.tsx
frontend-copy/src/app/login/: page.tsx
frontend-copy/src/app/register/: page.tsx
frontend-copy/src/components/: autocomplete.tsx  footer-navbar.tsx  landing-navbar.tsx  mode-toggle.tsx  placeholder-node.tsx
frontend-copy/src/components/data-table/: data-table.tsx  pagination.tsx
frontend-copy/src/components/form-fields/: custom-text.tsx  (+2 more)
frontend-copy/src/lib/: interfaces.ts  mock-data.ts  utils.ts
frontend/public/: config.js  config.template.js  manifest.json
frontend/src/: api.ts  auth.ts  auth.tsx  config.ts  main.tsx  routeTree.gen.ts  styles.css
frontend/src/app/: page.tsx
frontend/src/components/: anime-card.tsx  install-banner.tsx  navbar.tsx  not-found.tsx
frontend/src/hooks/: use-job-progress.ts  use-pwa-install.ts  use-toggle-saved.ts
frontend/src/lib/: api-client.ts  api-server.ts  format-bytes.ts  mock-data.ts
frontend/src/providers/: progress-provider.tsx
frontend/src/routes/: __root.tsx  index.tsx  login.tsx
frontend/src/types/: config.d.ts
nginx/: nginx.dev.conf  nginx.prod.conf
postgres/: init.sql
queue/: Dockerfile  entrypoint.sh  pyproject.toml
queue/src/: config.py  log.py  main.py
queue/src/database/: models.py
queue/src/tasks/: download.py  order.py
requests/: workspace.yml
requests/collections/Anime/: Bulk Download App Episodes.bru  Delete Anime Storage.bru  Delete App Episode.bru  Download App Episode.bru  Download File Episode.bru  Get Anime.bru  Get Download Status Streams.bru  Get Downloaded Animes.bru  Get Downloaded Episodes.bru  Get In Emission Animes.bru  Get Last Downloaded Episodes.bru  Get Saved Animes.bru  Get Storage Size.bru  Save Anime.bru  Search Anime.bru  Unsave Anime.bru  Update Anime Info.bru
requests/collections/auth/: Login.bru  Register.bru
requests/environments/: Test.yml
tasks/: 01-refactor.md  02-orm-delete.md  03-polish.md  04-function-polish.md  05-better-logs.md  06-no-auth-logic.md  07-search-page.md  08-saved-page.md  09-anime-detail-page.md  10-download-page.md  11-calendar-page.md  13-home-page.md  14-login-page.md  15-login-page-parallel.md
worker/: .dockerignore  Dockerfile  pyproject.toml
worker/src/: config.py  db.py  log.py  main.py  redis_client.py  schemas.py  utils.py
worker/src/database/: __init__.py  client.py  repository.py
worker/src/tasks/: __init__.py  download.py  order.py
(+152 files in other folders)
