[project]
name = "aniseek-api"
version = "2.0.12"
description = "REST API for anime streaming and scraping management"
readme = "README.md"
requires-python = ">=3.10.14"
dependencies = [
    "ani-scrapy==0.7.0",
    "bcrypt>=5.0.0",
    "databases[asyncpg]>=0.9.0",
    "dramatiq>=2.1.0",
    "fastapi[standard]>=0.136.1",
    "loguru>=0.7.3",
    "passlib[bcrypt]>=1.7.4",
    "pydantic-settings>=2.14.1",
    "python-dotenv>=1.2.2",
    "python-jose>=3.5.0",
    "redis>=7.4.0",
]

[dependency-groups]
dev = [
    "isort>=8.0.1",
    "ruff>=0.15.13",
]
