[project]
name = "aniseek-worker"
version = "1.1.2"
description = "Background worker for anime scraping tasks"
readme = "README.md"
requires-python = ">=3.10.14"
dependencies = [
    "ani-scrapy",
    "dramatiq[redis]>=1.19.0",
    "dotenv>=0.9.9",
    "psycopg2>=2.9.11",
    "pydantic-settings>=2.11.0",
    "redis>=6.4.0",
    "requests>=2.32.5",
    "sqlalchemy>=2.0.44",
]
