[project]
name = "aniseek-worker"
version = "2.0.9"
description = "Background worker for anime scraping tasks"
readme = "README.md"
requires-python = ">=3.10.14"
dependencies = [
    "ani-scrapy>=0.6.2",
    "dramatiq[redis]>=1.19.0",
    "loguru>=0.7.3",
    "psycopg2-binary>=2.9.10",
    "pydantic-settings>=2.11.0",
    "python-dotenv>=1.2.2",
    "redis>=6.4.0",
    "requests>=2.32.5",
    "sqlalchemy>=2.0.0",
]
